# Portfolio-Optimisation

./: README.md  pyproject.toml  test.py
src/: extractor.py  main.py  processor.py  settings.py
