[tool.poetry]
name = "portfolio-optimizer"
version = "0.1.0"
description = "Stock forecasting project"
authors = ["Mrciin <chrostowskimarcin4@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.0"
yfinance = "^0.2.0"  # yfinance ma inną numerację, to jest poprawna wersja
prophet = "^1.1.0"
scipy = "^1.11.0"
streamlit = "^1.30.0"
pandas = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"